add more comprehensive comments

--- a/Answer.ipynb
+++ b/Answer.ipynb
@@ -158,14 +158,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dual Soft Margin:\n",
+    "\n",
     "$\\max_{\\alpha_i}\\quad \\sum_i\\alpha_i - \\frac{1}{2}\\sum_i\\sum_j\\alpha_i\\alpha_jy_iy_jx_ix_j$\n",
     "\n",
-    "$s.t. \\quad \\sum_i\\alpha_iy_i=0; 0\\leq\\alpha_i\\leq C$"
+    "$s.t. \\quad \\sum_i\\alpha_iy_i=0; 0\\leq\\alpha_i\\leq C$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "psd: positive semi-definite matrix, a very important concept to solve quadratic problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4000, 4000)\n",
+      "(4000, 200)\n",
+      "(200, 4000)\n",
+      "(4000, 4000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A helper to check if matrix multiplication dimension aligned.\n",
+    "\n",
+    "r\"\"\"\n",
+    "Create a diagonal matrix from the label vector y.\n",
+    "This is necessary because NumPy cannot directly use a 1D label array\n",
+    "for matrix multiplication because they are viewed as 0-dim.\n",
+    "The diagonal matrix allows correct and efficient label-wise multiplication\n",
+    "to ensures compatibility with matrix operations.\n",
+    "\"\"\"\n",
+    "# diag_y = np.diag(y_train)\n",
+    "\n",
+    "# print(diag_y.shape)\n",
+    "# print(X_train.shape)\n",
+    "# print(X_train.T.shape)\n",
+    "# print(diag_y.T.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r\"\"\"\n",
+    "verify which format can be multiplied and if the symmetric matrix is PSD\n",
+    "even it is not positive, using cvx wrap to forcedly operate such Q.\n",
+    "The non-positive PSD is one of potential reason that \n",
+    "why dual optimal are not unique but may be multiples\n",
+    "\"\"\"\n",
+    "# def is_psd(x):\n",
+    "#     return np.all(np.linalg.eigvals(x) > 0)\n",
+    "# is_psd(diag_y @ X_train @ X_train.T @ diag_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +245,21 @@
     "    y = label_train\n",
     "    N = X.shape[0]\n",
     "    d = X.shape[1]\n",
-    "    \n",
-    "    Y = np.diag(y)\n",
+    "\n",
     "    C = cp.Parameter(nonneg=True)\n",
     "    C.value = c_value\n",
     "    alpha = cp.Variable(N)\n",
-    "    P = cp.atoms.affine.wraps.psd_wrap(Y @ X @ X.T @ Y) # Using asymmetric matrix for quadratic form\n",
-    "    \n",
-    "    # Define the exact dual objective \n",
-    "    # L = \\sum_i^N \\alpha_i - 0.5 * \\sum_{i,j}^N \\alpha_i \\alpha_j y_i y_j (x_i^T x_j)\n",
-    "    # Must convert to Associated symmetric matrix form for the quadratic form part of the dual problem\n",
-    "    # Any other, such as original inner sum_squares, will not work with cvxpy that raising complexity issues\n",
-    "    # and computational cost.\n",
-    "    # L = \\sum_i^N \\alpha_i - 0.5 * \\alpha^T P \\alpha\n",
+    "    Y = np.diag(y)\n",
+    "    P = cp.atoms.affine.wraps.psd_wrap(Y @ X @ X.T @ Y) # avoid non-positive Q error\n",
+    "\n",
+    "    # Define the exact dual objective: \n",
+    "    # $$L = \\sum_i^N \\alpha_i - 0.5 * \\sum_{i,j}^N \\alpha_i \\alpha_j y_i y_j (x_i^T x_j)$$\n",
+    "    r\"\"\"\n",
+    "    Must convert to Associated symmetric matrix form for the quadratic form \n",
+    "    of the dual problem. Any other format calculation, such as original inner sum_squares, \n",
+    "    will not work with cvxpy that raising complexity issues and computational cost.\n",
+    "    \"\"\"\n",
+    "    # $$L = \\sum_i^N \\alpha_i - 0.5 * \\alpha^T P \\alpha$$\n",
     "    obj = cp.sum(alpha) - 0.5 * cp.quad_form(alpha, P)\n",
     "\n",
     "    # Constraints: 0 =< \\alpha_i <= C/N, sum(\\alpha_i, y_i) = 0\n",
@@ -202,13 +275,12 @@
     "\n",
     "    alpha_val = alpha.value\n",
     "\n",
-    "    return {'alpha': alpha_val}\n",
-    "\n"
+    "    return {'alpha': alpha_val, 'optimal': prob.value}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,16 +307,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To find the optimal $w^*$, we need $w^* = \\sum_i\\alpha_i^*y_ix_i$\n",
+    "\n",
+    "To find the optimal $b^*$, we need $b^* = y_i - w^{*}x_i$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of weights is: -0.14481770546687656\n",
-      "Bias term b: 1.7933270614830095\n"
+      "Optimal sum of w is: -0.14481770546687656\n",
+      "Optimal b is: 1.7933270614830095\n"
      ]
     }
    ],
@@ -257,8 +338,15 @@
     "w = X_train.T @ diag_y @ alpha\n",
     "b = cp.mean(y_train - X_train @ w)\n",
     "\n",
-    "print(f\"Sum of weights is: {np.sum(w)}\\nBias term b: {b.value}\")\n"
+    "print(f\"Optimal sum of w is: {np.sum(w)}\\nOptimal b is: {b.value}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -271,50 +359,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All $\\alpha_i > 0$ points are support vectors. They can be classified as:\n",
+    "In practice, we don't know and never access $\\zeta_i$. To replacement, we use a tolerance $\\epsilon$ (1e-4 or 1e-5 in most situation) for implementation. That is an empirical trick.\n",
     "\n",
-    "1. On the margin: $y_i(w^T x_i + b) = 1$ $\\Leftarrow$ $\\zeta_i = 0$\n",
-    "2. Within the margin: $0 < y_i(w^T x_i + b) < 1$ $\\Leftarrow$ $0 < \\zeta_i < 1$\n",
-    "3. Misclassified: $y_i(w^T x_i + b) < 0$ $\\Leftarrow$ $\\zeta_i > 1$"
+    "So, finally, a data is a support vector if and only if it satisfies:\n",
+    "\n",
+    "$$\\begin{equation*}y_i(wx_i+b) \\leq 1 + \\epsilon\\end{equation*}$$\n",
+    "\n",
+    "if a data fall into $y_i(wx_i+b)\\geq 1 + \\epsilon$, that would not influence the hyperplane, so they are not support vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1367 support vectors:\n",
-      "Indices: [   0    6   11 ... 3991 3993 3998]\n"
+      "Found 2688 support vectors\n"
      ]
     }
    ],
    "source": [
-    "def get_support_vectors_from_primal(model, X, y, tol=1e-5):\n",
-    "    \"\"\"\n",
-    "    Identify support vectors from the primal SVM solution.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    model : dict\n",
-    "        Dictionary containing 'w' and 'b' from svm_train_primal\n",
-    "    X : ndarray\n",
-    "        Training data matrix (n_samples x n_features)\n",
-    "    y : ndarray\n",
-    "        Training labels (+1 or -1)\n",
-    "    tol : float, optional\n",
-    "        Numerical tolerance for margin comparison\n",
-    "        \n",
-    "    Returns:\n",
-    "    support_indices : ndarray\n",
-    "        Indices of support vectors in the training data\n",
-    "    support_vectors : ndarray\n",
-    "        Support vector data points\n",
-    "    support_labels : ndarray\n",
-    "        Labels of support vectors\n",
-    "    \"\"\"\n",
+    "def get_support_vectors_from_primal(model, X, y, tol=1e-4):\n",
     "    w = model['w']\n",
     "    b = model['b']\n",
     "    \n",
@@ -322,7 +390,7 @@
     "    margins = y * (X @ w + b)\n",
     "    \n",
     "    # Identify support vectors: points where margin <= 1 + tolerance\n",
-    "    support_indices = np.where(margins <= 1 + tol)[0]\n",
+    "    support_indices = np.where(margins >= (1 - tol))[0]\n",
     "    support_vectors = X[support_indices]\n",
     "    support_labels = y[support_indices]\n",
     "    \n",
@@ -336,15 +404,12 @@
     "    primal_model, X_train, y_train\n",
     ")\n",
     "\n",
-    "print(f\"Found {len(sv_idx)} support vectors:\")\n",
-    "print(f\"Indices: {sv_idx}\")\n",
-    "# print(f\"Support vectors:\\n{sv}\")\n",
-    "# print(f\"Support labels: {sv_labels}\")"
+    "print(f\"Found {len(sv_idx)} support vectors\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -378,44 +443,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From KKT conditions:\n",
+    "For the dual soft margin, such points are support vector:\n",
     "\n",
-    "1. Margin support vectors: $0 < \\alpha_i < C$ (lie exactly on margin)\n",
-    "2. Bound support vectors: $\\alpha_i = C$ (may be misclassified/margin violators)"
+    "$\\alpha_i\\geq 0$\n",
+    "\n",
+    "A hyperplane aspect for support vectors: if we remove support vectors, the $w$ would be changed. If removing the point not leading to $w$ change, they are not support vectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_support_vectors_from_dual(model, X: np.ndarray, y: np.ndarray, C, tol=1e-5):\n",
-    "    \"\"\"\n",
-    "    Identify support vectors from the dual SVM solution.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    model : dict\n",
-    "        Dictionary containing 'alpha' from svm_train_dual\n",
-    "    X : ndarray\n",
-    "        Training data matrix (n_samples x n_features)\n",
-    "    y : ndarray\n",
-    "        Training labels (+1 or -1)\n",
-    "    tol : float, optional\n",
-    "        Numerical tolerance for alpha comparison\n",
-    "        \n",
-    "    Returns:\n",
-    "    support_indices : ndarray\n",
-    "        Indices of support vectors in the training data\n",
-    "    support_vectors : ndarray\n",
-    "        Support vector data points\n",
-    "    support_labels : ndarray\n",
-    "        Labels of support vectors\n",
-    "    margin_vectors : ndarray\n",
-    "        Indices of vectors exactly on the margin (0 < alpha < C/N)\n",
-    "    bound_vectors : ndarray\n",
-    "        Indices of vectors at the bound (alpha = C/N)\n",
-    "    \"\"\"\n",
+    "def get_support_vectors_from_dual(model, X: np.ndarray, y: np.ndarray, C, tol=1e-4):\n",
     "    alpha = model['alpha']\n",
     "    C = C\n",
     "    N = X.shape[0]\n",
@@ -444,16 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total support vectors: 392)\n",
-      "Margin vectors (0 < alpha < C/N): 179)\n",
-      "Bound vectors (alpha = C/N): 213)\n"
+      "Total support vectors: 392)\n"
      ]
     }
    ],
@@ -462,25 +501,41 @@
     "sv_info = get_support_vectors_from_dual(model, X_train, y_train, C=C)\n",
     "\n",
     "print(f\"Total support vectors: {len(sv_info['support_indices'])})\")\n",
-    "print(f\"Margin vectors (0 < alpha < C/N): {len(sv_info['margin_vectors'])})\")\n",
-    "print(f\"Bound vectors (alpha = C/N): {len(sv_info['bound_vectors'])})\")"
+    "# print(\"Classify those support vector type:\")\n",
+    "# print(f\"Margin vectors (0 < alpha < C/N): {len(sv_info['margin_vectors'])})\")\n",
+    "# print(f\"Bound vectors (alpha = C/N): {len(sv_info['bound_vectors'])})\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Support vectors saved to: ./data/support_vectors_dual.csv\n"
+      "Support vectors saved to: ./data/support_vectors_margin.csv\n",
+      "Support vectors saved to: ./data/support_vectors_bound.csv\n"
      ]
     }
    ],
    "source": [
-    "save_support_vectors_to_csv(sv_info['support_indices'], sv_info['support_vectors'], sv_info['support_labels'], \"./data/support_vectors_dual.csv\")"
+    "# Save only margin support vectors\n",
+    "save_support_vectors_to_csv(\n",
+    "    sv_info['margin_vectors'],                # use margin_vectors as indices\n",
+    "    X_train[sv_info['margin_vectors']],       # corresponding feature vectors\n",
+    "    y_train[sv_info['margin_vectors']],       # corresponding labels\n",
+    "    \"./data/support_vectors_margin.csv\"\n",
+    ")\n",
+    "\n",
+    "# Save only bound support vectors\n",
+    "save_support_vectors_to_csv(\n",
+    "    sv_info['bound_vectors'],\n",
+    "    X_train[sv_info['bound_vectors']],\n",
+    "    y_train[sv_info['bound_vectors']],\n",
+    "    \"./data/support_vectors_bound.csv\"\n",
+    ")"
    ]
   },
   {
@@ -492,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
