refine step errors; add some prerequisition of quad prog

--- a/Answer.ipynb
+++ b/Answer.ipynb
@@ -312,7 +312,13 @@
    "source": [
     "To find the optimal $w^*$, we need $w^* = \\sum_i\\alpha_i^*y_ix_i$\n",
     "\n",
-    "To find the optimal $b^*$, we need $b^* = y_i - w^{*}x_i$"
+    "To find the optimal $b^*$, we need $b^* = y_i - w^{*}x_i$\n",
+    "\n",
+    "<!-- - KKT has fourth condition. The fourth one complementary slackness is: $\\mu_i^* g_i(x^*)=0\\quad \\forall i$\n",
+    "- That means, when $x_i^*$ is optimal, and Lagrangian multiplier non-negative, we ensure $g_i(x*) = 0$\n",
+    "- $g_i(x)$ is primal problem inequality constraints function which $\\leq 0$. So we get $\\underbrace{\\alpha^*}_{\\mu_i^*} \\underbrace{(1 - y_i(w^{*\\top}x_i + b^*) - \\zeta_i^*)}_{g_i(x^*)} = 0$\n",
+    "- Based on KKT first condition, (gradient) stationarity, we know second multiplier $\\beta_i=C-\\alpha_i$\n",
+    "- so that $b^* = y_i - w^{*}x_i$ -->"
    ]
   },
   {
@@ -340,13 +346,6 @@
     "\n",
     "print(f\"Optimal sum of w is: {np.sum(w)}\\nOptimal b is: {b.value}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
