--- a/svm_cvxopt.ipynb
+++ b/svm_cvxopt.ipynb
@@ -141,25 +141,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{equation}\\min f(x) = q^Tx + \\frac{1}{2}x^TQx \\end{equation}$\n",
+    "another quadratic program format\n",
+    "<!-- $\\begin{equation}\\min f(x) = q^Tx + \\frac{1}{2}x^TQx \\end{equation}$\n",
     "\n",
     "$\\begin{equation}s.t.\\quad Ax=a \\end{equation}$\n",
     "\n",
     "$\\begin{equation}Bx\\leq b \\end{equation}$\n",
     "\n",
-    "$\\begin{equation}x\\geq 0 \\end{equation}$"
+    "$\\begin{equation}x\\geq 0 \\end{equation}$ -->"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: How to convert original primal/dual soft margin to align quadratic programming?"
+    "$w = \\sum_i\\alpha_iy_ix_i \\sim(Y\\alpha)^TX$\n",
+    "\n",
+    "$b^* = y_i - w^*x$ which conducted by KKT condition\n",
+    "\n",
+    "following standard equation are given by cvxpy (not cvxopt) quadratic programming example\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "  \\begin{aligned}\n",
+    "    \\text{minimize}\\quad &\\frac{1}{2}x^TPx+q^Tx \\\\\n",
+    "    \\text{subject to}\\quad &Gx\\leq h \\\\\n",
+    "    &Ax = b\n",
+    "  \\end{aligned}\n",
+    "\\end{equation*}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +214,7 @@
     "w = ((y * alphas).T @ X).reshape(-1, 1)\n",
     "\n",
     "# Finding the non-zero alphas\n",
-    "S = (alphas > 1e-4).flatten()\n",
+    "S = (alphas > 1e-4).flatten() # support vectors\n",
     "\n",
     "# B is y - x.W\n",
     "b = y[S] - np.dot(X[S], w)\n",
